Fix more test related concerns