@@ -8,7 +8,6 @@ package waffle.servlet.spi;
 
 import jakarta.servlet.http.HttpServletResponse;
 
-import java.util.Arrays;
 import java.util.List;
 
 import mockit.Mocked;
@@ -60,7 +59,7 @@ class NegotiateSecurityFilterProviderTest {
      */
     @Test
     void testSetProtocols() {
-        final List<String> newProtocols = Arrays.asList("NTLM");
+        final List<String> newProtocols = List.of("NTLM");
         this.provider.setProtocols(newProtocols);
         Assertions.assertEquals(1, this.provider.getProtocols().size());
         Assertions.assertTrue(this.provider.getProtocols().contains("NTLM"));
@@ -115,7 +114,7 @@ class NegotiateSecurityFilterProviderTest {
      */
     @Test
     void testSendUnauthorizedWithCustomProtocols() {
-        this.provider.setProtocols(Arrays.asList("Negotiate"));
+        this.provider.setProtocols(List.of("Negotiate"));
         this.provider.sendUnauthorized(this.response);
         Assertions.assertNotNull(new Verifications() {
             {
